--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
     <!-- About Us Section -->
     <section id="about" style="padding: 1rem; max-width: 1200px; margin: auto; text-align: center;">
       <h2>TENTANG KAMI</h2>
-      <p>DZULFIKAR adalah toko online Aman dan Terpercaya</p>
+      <p>DZULFIKAR adalah toko online Terpercaya dan Aman</p>
 
       
     </section>
