--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KIRA Store - Final </title>
+  <title>KIRA Store - Final Template</title>
 
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -205,9 +205,8 @@
   margin-bottom: 0.5rem;
   text-shadow:
     0 0 5px #ffb400,
-    0 0 10px #ffb400,
-    0 0 6px #ffd54f,
-    0 0 10px #ffd54f;
+    0 0 10px #ffb400;
+
 }
 
     .product-price {
