--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <!-- Transaksi Section -->
     <section id="transaksi" style="padding: 1rem; max-width: 1200px; margin: auto; text-align: center;">
       <h2>TRANSAKSI</h2>
-      <p>Metode pembayaran kami</p>
+      <p>Metode pembayaran </p>
       <!-- Bisa ditambahkan carousel gambar pembayaran di sini -->
        <div class="payment-carousel">
   <div class="carousel-track">
