--- a/public/index.html
+++ b/public/index.html
@@ -400,7 +400,17 @@
   <!-- Navbar -->
   <nav class="navbar">
     <button id="menu-toggle" aria-label="Toggle menu"><i class="ri-menu-line"></i></button>
-    <div id="navbarlogo" style="color:white; font-weight: 700; font-size: 1.25rem;">DZULFIKAR</div>
+  <div id="navbarlogo"
+     style="
+       background: linear-gradient(to bottom, #fff, #000);
+       -webkit-background-clip: text;
+       color: transparent;
+       font-weight: 700;
+       font-size: 1.25rem;
+     ">
+  DZULFIKAR
+</div>
+
     <button id="cart-toggle" aria-label="Toggle cart" class="position-relative">
       <i class="ri-shopping-cart-line"></i>
       <span id="cart-count">0</span>
