--- a/public/index.html
+++ b/public/index.html
@@ -322,7 +322,7 @@
     .cart-item-size {
       font-weight: 400;
       font-size: 0.8rem;
-      color: #000;
+      color: #f9f9f9;
     }
  
     .cart-item-remove {
