--- a/public/index.html
+++ b/public/index.html
@@ -317,7 +317,7 @@
       flex-direction: column;
       font-weight: 600;
       font-size: 0.9rem;
-      color: #000;
+      color:#f9f9f9;
     }
     .cart-item-size {
       font-weight: 400;
