--- a/public/index.html
+++ b/public/index.html
@@ -1,119 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KIRA Store</title>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Cinzel&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>KIRA Store - Final </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Remix Icon -->
+  <link href="https://cdn.jsdelivr.net/npm/remixicon/fonts/remixicon.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="ray.css" />
 </head>
-<body>
 
-  <!-- Navbar -->
+<body>
   <nav class="navbar">
-    <button id="menu-toggle">☰</button>
-    <div id="navbarlogo">Dzulfikar</div>
-    <button id="cart-toggle">
-      🛒
+    <button id="menu-toggle" aria-label="Toggle menu"><i class="ri-menu-line"></i></button>
+    <div id="navbarlogo" style="
+     background: linear-gradient(to bottom, #6aff00, #2b272722);
+
+       -webkit-background-clip: text;
+       color: transparent;
+       font-weight: 900;
+       font-size: 1.25rem;
+     ">
+      DZULFIKAR
+    </div>
+
+
+    <button id="cart-toggle" aria-label="Toggle cart" class="position-relative">
+      <i class="ri-shopping-bag-3-line"></i></i>
       <span id="cart-count">0</span>
     </button>
   </nav>
 
-  <!-- Sidebar -->
-  <div class="sidebar" id="sidebar">
-    <div class="sidebar-nav">
-      <a href="#">FACEBOOK</a>
-      <a href="#">INSTAGRAM</a>
-      <a href="#">WHATSAPP</a>
+  <!-- Sidebar Menu -->
+  <aside class="sidebar" id="sidebar-menu">
+    <nav class="sidebar-nav">
+      <a href="kontak.html">Kontak</a>
+    </nav>
+  </aside>
+
+
+  <!-- Sidebar Cart -->
+  <aside class="sidebar-cart" id="sidebar-cart">
+<div class="cart-summary">
+  <span>Keranjang Kamu</span>
+  <button class="close-cart" id="close-cart">&times;</button>
+</div>
+
+    <div class="cart-items" id="cart-items"></div>
+
+    <!-- Keterangan total -->
+    <!-- Total belanja -->
+    <div class="cart-total-row">
+      <span class="cart-total-label">Total Belanja:</span>
+      <span class="cart-total" id="cart-total">Rp0</span>
     </div>
-  </div>
+
+    <!-- Tombol checkout -->
+    <button class="checkout-btn" id="checkout-btn">
+      <i class="ri-shopping-bag-line" style="margin-right: 6px;"></i> Checkout
+    </button>
+
+  </aside>
 
   <!-- Overlay -->
   <div class="overlay" id="overlay"></div>
 
-  <!-- Banner -->
-  <section class="banner-section" style="height: 250px; display:flex; justify-content:center; align-items:center; color:white; text-align:center;">
-    <div>
-      <h1>dzulfikar</h1>
-      <p>Kaos • Polos 24s</p>
-    </div>
-  </section>
-
-  <!-- Product Grid -->
-  <section class="product-grid">
-    <!-- Produk 1 -->
-    <div class="product-card">
-      <img src="images/hoodie1.jpg" alt="Hoodie 1" class="product-image">
-      <div class="product-name">BAJU HITAM</div>
-      <div class="product-rating">★★★★★</div>
-      <div class="product-price"><img src="images/rp.png" alt="">100.000</div>
-      <div class="size-buttons">
-        <button class="size-btn">M</button>
-        <button class="size-btn">L</button>
-        <button class="size-btn">XL</button>
+  <!-- Main Content -->
+  <main>
+    <!-- Welcome Section -->
+    <section class="banner-section" style="text-align:center; padding: 6rem 2rem; color: white;">
+      <h5>Selamat Datang di</h5>
+      <h1 style="font-weight: 800; font-size: 3rem; margin: 0.5rem 0;">DZULFIKAR</h1>
+      <p>Silahkan Belanja</p>
+    </section>
+    <!-- Products -->
+    <section class="product-grid" id="product">
+      <!-- Example product card, duplicate/change as needed -->
+      <div class="product-card" data-id="hitam" data-name="HOODIE Hitam" data-price="100000" data-image="images/4.jpg">
+        <img src="images/4.jpg" alt="Kaos Hitam" class="product-image" />
+        <h3 class="product-name">HOODIE HITAM</h3>
+        <div class="product-rating" title="Rating 5/5">
+          <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i
+            class="ri-star-fill"></i><i class="ri-star-fill"></i>
+        </div>
+        <p class="product-price">
+          Rp100.000
+        </p>
+        <div class="size-buttons" role="group" aria-label="Pilih ukuran kaos hitam">
+          <button class="size-btn" type="button">M</button>
+          <button class="size-btn" type="button">L</button>
+          <button class="size-btn" type="button">XL</button>
+        </div>
+        <button class="add-to-cart-btn btn btn-success mt-auto" type="button"
+          aria-label="Tambah Hitam ke keranjang">Tambah Keranjang</button>
       </div>
-      <button class="add-to-cart-btn">Tambah Keranjang</button>
-    </div>
 
-    <!-- Produk 2 -->
-    <div class="product-card">
-      <img src="images/hoodie2.jpg" alt="Hoodie 2" class="product-image">
-      <div class="product-name">BAJU PUTIH</div>
-      <div class="product-rating">★★★★☆</div>
-      <div class="product-price"><img src="images/rp.png" alt="">100.000</div>
-      <div class="size-buttons">
-        <button class="size-btn">M</button>
-        <button class="size-btn">L</button>
-        <button class="size-btn">XL</button>
+      <div class="product-card" data-id="putih" data-name="HOODIE MERAH" data-price="100000" data-image="images/5.jpg">
+        <img src="images/5.jpg" alt="Kaos Putih" class="product-image" />
+        <h3 class="product-name">HOODIE MERAH</h3>
+        <div class="product-rating" title="Rating 5/5">
+          <i class="ri-star-fill"></i>
+          <i class="ri-star-fill"></i>
+          <i class="ri-star-fill"></i>
+          <i class="ri-star-fill"></i>
+          <i class="ri-star-fill"></i>
+
+
+
+        </div>
+        <p class="product-price">
+          Rp100.000
+        </p>
+        <div class="size-buttons" role="group" aria-label="Pilih ukuran kaos putih">
+          <button class="size-btn" type="button">M</button>
+          <button class="size-btn" type="button">L</button>
+          <button class="size-btn" type="button">XL</button>
+        </div>
+        <button class="add-to-cart-btn btn btn-success mt-auto" type="button"
+          aria-label="Tambah Putih ke keranjang">Tambah Keranjang</button>
       </div>
-      <button class="add-to-cart-btn">Tambah Keranjang</button>
-    </div>
 
-    <!-- Produk 3 -->
-    <div class="product-card">
-      <img src="images/hoodie3.jpg" alt="Hoodie 3" class="product-image">
-      <div class="product-name">BAJU MERAH</div>
-      <div class="product-rating">★★★★★</div>
-      <div class="product-price"><img src="images/rp.png" alt="">100.000</div>
-      <div class="size-buttons">
-        <button class="size-btn">M</button>
-        <button class="size-btn">L</button>
-        <button class="size-btn">XL</button>
+      <div class="product-card" data-id="merah" data-name="HOODIE PUTIH" data-price="100000" data-image="images/6.jpg">
+        <img src="images/6.jpg" alt="Kaos Putih" class="product-image" />
+        <h3 class="product-name">HOODIE PUTIH</h3>
+        <div class="product-rating" title="Rating 5/5">
+          <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i><i
+            class="ri-star-fill"></i><i class="ri-star-fill"></i>
+        </div>
+        <p class="product-price">
+          Rp100.000
+        </p>
+        <div class="size-buttons" role="group" aria-label="Pilih ukuran kaos putih">
+          <button class="size-btn" type="button">M</button>
+          <button class="size-btn" type="button">L</button>
+          <button class="size-btn" type="button">XL</button>
+        </div>
+        <button class="add-to-cart-btn btn btn-success mt-auto" type="button"
+          aria-label="Tambah Putih ke keranjang">Tambah Keranjang</button>
       </div>
-      <button class="add-to-cart-btn">Tambah Keranjang</button>
-    </div>
-  </section>
 
-  <!-- Sidebar Cart -->
-  <div class="sidebar-cart" id="cart">
-    <div class="cart-header">
-      <span>KERANJANG</span>
-      <button class="close-cart" id="close-cart">&times;</button>
-    </div>
 
-    <div id="cart-items"></div>
+      <!-- Tambahkan produk lain sesuai format di atas -->
+    </section>
 
-    <div class="cart-total-row">
-      <span class="cart-total-label">Total:</span>
-      <span class="cart-total">Rp <span id="cart-total">0</span></span>
-    </div>
-
-    <button class="checkout-btn">Checkout</button>
-  </div>
-
-  <!-- Modal Login -->
-  <div id="login-modal" class="modal">
-    <div class="modal-content">
-      <span class="close" id="close-login">&times;</span>
-      <h2>Login</h2>
-      <input type="text" placeholder="Username">
-      <input type="password" placeholder="Password">
-      <button>Login</button>
-      <p style="text-align:center; margin-top:10px;">Don't have an account? <a href="#" style="color:#ff4c4c;">Register</a></p>
-    </div>
-  </div>
-
-      <section id="transaksi" style="padding: 1rem; max-width: 1200px; margin: auto; text-align: center;">
+    <!-- Transaksi Section -->
+    <section id="transaksi" style="padding: 1rem; max-width: 1200px; margin: auto; text-align: center;">
       <h2>TRANSAKSI</h2>
       <p>Metode pembayaran </p>
       <!-- Bisa ditambahkan carousel gambar pembayaran di sini -->
@@ -137,7 +172,26 @@
       </div>
     </section>
 
+    <!-- About Us Section -->
+    <section id="about" style="padding: 1rem; max-width: 1200px; margin: auto; text-align: center;">
+      <h2>TENTANG KAMI</h2>
+      <p>toko online Terpercaya dan Aman
 
-  <script src="script.js"></script>
+      </p>
+
+
+    </section>
+  </main>
+
+  <footer style="text-align:center; padding: 1rem; background:#000; color:white; margin-top: 2rem;">
+    &copy; 2025 DZULFIKAR, Inc.
+  </footer>
+
+  <!-- Bootstrap JS Bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script src="app.js"></script> <!-- Pastikan path-nya sesuai -->
+
 </body>
+
 </html>
