Update welcome and about sections in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,9 @@
   <main>
     <!-- Welcome Section -->
     <section class="banner-section" style="text-align:center; padding: 6rem 2rem; color: white;">
-      <h5>Selamat Datang di</h5>
+      <h5>welcome to</h5>
       <h1 style="font-weight: 800; font-size: 3rem; margin: 0.5rem 0;">DZULFIKAR</h1>
-      <p>Silahkan Belanja</p>
+      <p>silahkan belanja</p>
     </section>
     <!-- Products -->
     <section class="product-grid" id="product">
@@ -103,14 +103,8 @@
         <img src="images/5.jpg" alt="Kaos Putih" class="product-image" />
         <h3 class="product-name">HOODIE MERAH</h3>
         <div class="product-rating" title="Rating 5/5">
-          <i class="ri-star-fill"></i>
-          <i class="ri-star-fill"></i>
-          <i class="ri-star-fill"></i>
-          <i class="ri-star-fill"></i>
-          <i class="ri-star-fill"></i>
-
-
-
+          <i class="ri-star-fill"></i><i class="ri-star-fill"></i><i class="ri-star-fill"></i>
+          <i class="ri-star-fill"></i><i class="ri-star-fill"></i>
         </div>
         <p class="product-price">
           Rp100.000
@@ -174,9 +168,8 @@
 
     <!-- About Us Section -->
     <section id="about" style="padding: 1rem; max-width: 1200px; margin: auto; text-align: center;">
-      <h2>TENTANG KAMI</h2>
-      <p>toko online Terpercaya dan Aman
-
+      <h2>COD</h2>
+      <p>silahkan pesan melalui Whatsapp
       </p>
 
 
