Update link in kontak.html from rayhan.html to index.html

--- a/public/kontak.html
+++ b/public/kontak.html
@@ -27,7 +27,7 @@
       </button>
       <h2 class="text-xl font-bold mb-6"></h2>
       <ul class="space-y-4">
-        <a href="rayhan.html" class="hover:text-gray-300 flex items-center gap-2 font-cinzel">
+        <a href="index.html" class="hover:text-gray-300 flex items-center gap-2 font-cinzel">
           <i class="ri-home-3-line text-white text-2xl"></i> home
         </a>
       </ul>
