--- a/public/checkout.html
+++ b/public/checkout.html
@@ -57,23 +57,33 @@
       margin-top: 5px;
     }
 
-    #qris-container {
+    #manual-payment {
       display: none;
-      opacity: 0;
-      transition: opacity 0.4s ease;
+      background: #fff;
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+      margin-top: 15px;
+    }
+
+    #manual-payment p {
+      margin: 8px 0;
+      font-size: 15px;
+    }
+
+    #bukti-container {
+      display: none;
+      margin-top: 15px;
       text-align: center;
-      margin-top: 20px;
     }
 
-    #qris-container.show {
-      display: block;
-      opacity: 1;
-    }
-
-    #qris-code {
-      margin: 15px auto;
-      width: 220px;
-      height: 220px;
+    #preview-bukti {
+      margin-top: 10px;
+      width: 100%;
+      max-width: 300px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      display: none;
     }
 
     button {
@@ -122,43 +132,45 @@
     <label for="payment-method">Pilih Metode Pembayaran:</label>
     <select id="payment-method" required>
       <option value="">-- Pilih Metode --</option>
-      <option value="dana">Dana</option>
+      <option value="dana">Seabank</option>
       <option value="gopay">GoPay</option>
       <option value="bri">BRI</option>
       <option value="bni">BNI</option>
     </select>
 
-    <div id="qris-container">
-      <p>Scan QR berikut untuk membayar:</p>
-      <div id="qris-code"></div>
+    <div id="manual-payment"></div>
+
+    <!-- Upload bukti transfer -->
+    <div id="bukti-container">
+      <label for="bukti-transfer">Upload Bukti Transfer:</label>
+      <input type="file" id="bukti-transfer" accept="image/*">
+      <img id="preview-bukti" alt="Preview bukti transfer">
     </div>
 
     <button type="submit" id="complete-payment">Selesai Bayar</button>
   </form>
 </div>
 
-<!-- Library QRCode -->
-<script src="https://cdn.jsdelivr.net/npm/qrcodejs/qrcode.min.js"></script>
-
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const checkoutList = document.getElementById("checkout-list");
   const totalPriceEl = document.getElementById("total-price");
   const paymentSelect = document.getElementById("payment-method");
-  const qrisContainer = document.getElementById("qris-container");
-  const completeBtn = document.getElementById("complete-payment");
+  const manualPayment = document.getElementById("manual-payment");
+  const buktiContainer = document.getElementById("bukti-container");
+  const buktiInput = document.getElementById("bukti-transfer");
+  const previewBukti = document.getElementById("preview-bukti");
 
   const formatRupiah = n => "Rp" + n.toLocaleString("id-ID");
   const cart = JSON.parse(localStorage.getItem("checkout")) || [];
 
-  // Jika keranjang kosong
   if (cart.length === 0) {
     checkoutList.innerHTML = `<p style="text-align:center;color:#999;">Keranjang kamu kosong.</p>`;
-    completeBtn.disabled = true;
+    document.getElementById("complete-payment").disabled = true;
     return;
   }
 
-  // Tampilkan item checkout
+  // ==== TAMPILKAN DAFTAR PRODUK ====
   let total = 0;
   checkoutList.innerHTML = cart.map(item => {
     const price = Number(item.price) || 0;
@@ -181,49 +193,89 @@ document.addEventListener("DOMContentLoaded", () => {
 
   totalPriceEl.textContent = formatRupiah(total);
 
-  // Data link pembayaran (contoh fiktif)
-  const paymentLinks = {
-    dana: "https://link.dana.id/qris?amount=",
-    gopay: "https://gopay.link/qris?amount=",
-    bri: "https://bri.link/qris?amount=",
-    bni: "https://bni.link/qris?amount="
+  // ==== INFORMASI PEMBAYARAN ====
+  const paymentInfo = {
+    Shopeepay: { nama: "Shopeepay", info: "Nomor: 082197770219 (a.n. DZULFIKAR RAYHAN BOWENG )" },
+    Gopay: { nama: "GoPay", info: "Nomor: 082197770219 (a.n. DZULFIKAR RAYHAN BOWENG)" },
+    Ovo: { nama: "Ovo", info: "Nomor: 082197770219 (a.n. DZULFIKAR RAYHAN BOWENG)" },
+    Seabank: { nama: "Seabank", info: "Rek: 9019-0569-4689 (a.n. DZULFIKAR RAYHAN BOWENG)" },
+    Neobank: { nama: "Neobank", info: "Rek: 5859-4572-0870-8191 (a.n. DZULFIKAR RAYHAN BOWENG)" },
   };
 
-  // QRIS dinamis
   paymentSelect.addEventListener("change", () => {
     const method = paymentSelect.value;
-    const qrEl = document.getElementById("qris-code");
-    qrEl.innerHTML = "";
-
     if (!method) {
-      qrisContainer.classList.remove("show");
-      qrisContainer.style.display = "none";
+      manualPayment.style.display = "none";
+      buktiContainer.style.display = "none";
       return;
     }
 
-    const qrData = paymentLinks[method] + total;
-    new QRCode(qrEl, {
-      text: qrData,
-      width: 220,
-      height: 220
-    });
-
-    qrisContainer.style.display = "block";
-    setTimeout(() => qrisContainer.classList.add("show"), 10);
+    const data = paymentInfo[method];
+    manualPayment.style.display = "block";
+    manualPayment.innerHTML = `
+      <h3>Instruksi Pembayaran (${data.nama})</h3>
+      <p>${data.info}</p>
+      <p><strong>Total yang harus dibayar:</strong> ${formatRupiah(total)}</p>
+      <p>Setelah transfer, upload bukti pembayaran di bawah ini:</p>
+    `;
+    buktiContainer.style.display = "block";
   });
 
-  // Tombol selesai bayar
-  document.getElementById("checkout-form").addEventListener("submit", (e) => {
+  // ==== PREVIEW GAMBAR ====
+  buktiInput.addEventListener("change", (e) => {
+    const file = e.target.files[0];
+    if (file) {
+      const reader = new FileReader();
+      reader.onload = () => {
+        previewBukti.src = reader.result;
+        previewBukti.style.display = "block";
+      };
+      reader.readAsDataURL(file);
+    }
+  });
+
+  // ==== KETIKA SUBMIT ====
+  document.getElementById("checkout-form").addEventListener("submit", async (e) => {
     e.preventDefault();
     const nama = document.getElementById("nama").value;
     const telepon = document.getElementById("telepon").value;
     const alamat = document.getElementById("alamat").value;
     const metode = paymentSelect.value;
+    const bukti = buktiInput.files[0];
 
-    alert(`✅ Terima kasih, ${nama}!\nNomor HP: ${telepon}\nAlamat: ${alamat}\nMetode: ${metode.toUpperCase()}\nTotal: ${formatRupiah(total)}`);
+    if (!bukti) {
+      alert("⚠️ Harap upload bukti transfer terlebih dahulu.");
+      return;
+    }
 
-    localStorage.removeItem("checkout");
-    window.location.href = "index.html";
+    // 🔥 Buat FormData untuk dikirim ke server
+    const formData = new FormData();
+    formData.append("bukti", bukti);
+    formData.append("nama", nama);
+    formData.append("telepon", telepon);
+    formData.append("alamat", alamat);
+    formData.append("metode", metode);
+    formData.append("total", total);
+
+    try {
+      const res = await fetch("/transaksi", {
+        method: "POST",
+        body: formData
+      });
+
+      const result = await res.json();
+
+      if (res.ok) {
+        alert(`✅ Terima kasih, ${nama}!\nTransaksi kamu telah berhasil disimpan.`);
+        localStorage.removeItem("checkout");
+        window.location.href = "index.html";
+      } else {
+        alert("❌ Gagal menyimpan transaksi: " + (result.error || "Kesalahan server"));
+      }
+    } catch (err) {
+      console.error(err);
+      alert("⚠️ Terjadi kesalahan saat mengirim data ke server.");
+    }
   });
 });
 </script>
