Update payment method options in checkout.html

--- a/public/checkout.html
+++ b/public/checkout.html
@@ -132,10 +132,11 @@
     <label for="payment-method">Pilih Metode Pembayaran:</label>
     <select id="payment-method" required>
       <option value="">-- Pilih Metode --</option>
-      <option value="dana">Seabank</option>
-      <option value="gopay">GoPay</option>
-      <option value="bri">BRI</option>
-      <option value="bni">BNI</option>
+      <option value="Shopeepay">Shopeepay</option>
+      <option value="Gopay">GoPay</option>
+      <option value="Ovo">Ovo</option>
+      <option value="Seabank">Seabank</option>
+        <option value="Neobank">Neobank</option>
     </select>
 
     <div id="manual-payment"></div>
