Update payment carousel images

--- a/public/index.html
+++ b/public/index.html
@@ -148,20 +148,23 @@
       <!-- Bisa ditambahkan carousel gambar pembayaran di sini -->
       <div class="payment-carousel">
         <div class="carousel-track">
-          <img src="images/dana.jpeg" alt="Dana" />
+          <img src="images/seabank.jpeg" alt="Seabank" />
           <img src="images/gopay.jpeg" alt="Gopay" />
-          <img src="images/bni.jpeg" alt="BNI" />
-          <img src="images/bri.jpeg" alt="BRI" />
+          <img src="images/ovo.jpeg" alt="Ovo" />
+            <img src="images/shopeepay.jpeg" alt="Shopeepay" />
+          <img src="images/neobank.jpeg" alt="Neobank" />
           <!-- Duplikat agar loop terlihat halus -->
-          <img src="images/dana.jpeg" alt="Dana" />
+           <img src="images/seabank.jpeg" alt="Seabank" />
           <img src="images/gopay.jpeg" alt="Gopay" />
-          <img src="images/bni.jpeg" alt="BNI" />
-          <img src="images/bri.jpeg" alt="BRI" />
+          <img src="images/ovo.jpeg" alt="Ovo" />
+               <img src="images/shopeepay.jpeg" alt="Shopeepay" />
+          <img src="images/neobank.jpeg" alt="Neobank" />
           <!-- Duplikat agar loop terlihat halus -->
-          <img src="images/dana.jpeg" alt="Dana" />
+             <img src="images/seabank.jpeg" alt="Seabank" />
           <img src="images/gopay.jpeg" alt="Gopay" />
-          <img src="images/bni.jpeg" alt="BNI" />
-          <img src="images/bri.jpeg" alt="BRI" />
+          <img src="images/ovo.jpeg" alt="Ovo" />
+               <img src="images/shopeepay.jpeg" alt="Shopeepay" />
+          <img src="images/neobank.jpeg" alt="Neobank" />
         </div>
       </div>
     </section>
